CREATE TABLE "users" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "username" varchar(50) UNIQUE NOT NULL,
  "email" varchar(255) UNIQUE NOT NULL,
  "hashed_password" varchar(255) NOT NULL,
  "display_name" varchar(100),
  "profile_picture_url" varchar(255),
  "is_ai" boolean NOT NULL DEFAULT false,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "friendships" (
  "user_one_id" integer NOT NULL,
  "user_two_id" integer NOT NULL,
  "status" varchar(20) NOT NULL DEFAULT 'pending',
  "action_user_id" integer NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz,
  PRIMARY KEY ("user_one_id", "user_two_id")
);

CREATE TABLE "posts" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "author_id" integer NOT NULL,
  "content" text NOT NULL,
  "is_private" boolean NOT NULL DEFAULT false,
  "parent_post_id" integer,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz
);

CREATE TABLE "events" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "creator_id" integer NOT NULL,
  "title" varchar(255) NOT NULL,
  "description" text,
  "start_time" timestamptz NOT NULL,
  "end_time" timestamptz NOT NULL,
  "location" varchar(255),
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "updated_at" timestamptz
);

CREATE TABLE "event_attendees" (
  "event_id" integer NOT NULL,
  "user_id" integer NOT NULL,
  "rsvp_status" varchar(20) NOT NULL DEFAULT 'invited',
  PRIMARY KEY ("event_id", "user_id")
);

CREATE TABLE "chats" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "chat_type" varchar(20) NOT NULL,
  "chat_name" varchar(100),
  "chat_image_url" varchar(255),
  "creator_id" integer NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "chat_participants" (
  "chat_id" integer NOT NULL,
  "user_id" integer NOT NULL,
  "role" varchar(20) NOT NULL DEFAULT 'member',
  "joined_at" timestamptz NOT NULL DEFAULT (now()),
  PRIMARY KEY ("chat_id", "user_id")
);

CREATE TABLE "messages" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "chat_id" integer NOT NULL,
  "sender_id" integer NOT NULL,
  "content" text NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now()),
  "read_by" text[]
);

CREATE TABLE "push_subscriptions" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer NOT NULL,
  "subscription_token" text UNIQUE NOT NULL,
  "device_type" varchar(20) NOT NULL,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "notifications" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "recipient_id" integer NOT NULL,
  "actor_id" integer,
  "notification_type" varchar(50) NOT NULL,
  "is_read" boolean NOT NULL DEFAULT false,
  "entity_id" integer,
  "created_at" timestamptz NOT NULL DEFAULT (now())
);

CREATE TABLE "external_calendar_sync" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" integer UNIQUE NOT NULL,
  "provider" varchar(50) NOT NULL,
  "refresh_token" text NOT NULL,
  "calendar_id" varchar(255) NOT NULL,
  "sync_token" text,
  "last_synced_at" timestamptz
);

CREATE INDEX ON "posts" ("author_id");

CREATE INDEX ON "posts" ("parent_post_id");

ALTER TABLE "friendships" ADD FOREIGN KEY ("user_one_id") REFERENCES "users" ("id");

ALTER TABLE "friendships" ADD FOREIGN KEY ("user_two_id") REFERENCES "users" ("id");

ALTER TABLE "friendships" ADD FOREIGN KEY ("action_user_id") REFERENCES "users" ("id");

ALTER TABLE "posts" ADD FOREIGN KEY ("author_id") REFERENCES "users" ("id");

ALTER TABLE "posts" ADD FOREIGN KEY ("parent_post_id") REFERENCES "posts" ("id");

ALTER TABLE "events" ADD FOREIGN KEY ("creator_id") REFERENCES "users" ("id");

ALTER TABLE "event_attendees" ADD FOREIGN KEY ("event_id") REFERENCES "events" ("id");

ALTER TABLE "event_attendees" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "chats" ADD FOREIGN KEY ("creator_id") REFERENCES "users" ("id");

ALTER TABLE "chat_participants" ADD FOREIGN KEY ("chat_id") REFERENCES "chats" ("id");

ALTER TABLE "chat_participants" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "messages" ADD FOREIGN KEY ("chat_id") REFERENCES "chats" ("id");

ALTER TABLE "messages" ADD FOREIGN KEY ("sender_id") REFERENCES "users" ("id");

ALTER TABLE "push_subscriptions" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "notifications" ADD FOREIGN KEY ("recipient_id") REFERENCES "users" ("id");

ALTER TABLE "notifications" ADD FOREIGN KEY ("actor_id") REFERENCES "users" ("id");

ALTER TABLE "external_calendar_sync" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");
